# zoop-backend

./: hello.py  main.py  pyproject.toml
src/: main.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  menu_items.py  order_items.py  orders.py  payments.py  restaurants.py  reviews.py  users.py
src/core/: config.py
src/db/: __init__.py  base.py
src/dependencies/: __init__.py  auth.py
src/models/: __init__.py  menu_item.py  order.py  order_item.py  payment.py  restaurant.py  review.py  user.py
src/schemas/: __init__.py  menu_item.py  order.py  order_item.py  payment.py  restaurant.py  review.py  user.py
src/services/: __init__.py  menu_item.py  order.py  order_item.py  payment.py  restaurant.py  review.py  user.py
