[project]
name = "uv-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
    "sentry-sdk>=2.20.0",
    "sqlalchemy>=2.0.38",
]
